# tasker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  create_success.html  edit_yaml.html  error.rs  file_util.rs  index.html  initialize.rs  launchctl.rs  launchers.rs  lib.rs  list_all.html  list_part.html  main.rs  server.rs  stderr.html  stdout.html  utils.rs
