[package]
name = "tasker"
version = "0.1.0"
authors = ["Congyuwang <116020237@link.cuhk.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
zip = "0.5"
actix-web = "3"
serde_yaml = "0.8"
strum_macros = "0.19.4"
plist = "1"
