[package]
name = "tasker"
version = "0.1.0"
authors = ["Congyuwang <116020237@link.cuhk.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
zip = "0.5"
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3"
sanitize-filename = "0.3"
serde_yaml = "0.8"
strum_macros = "0.19.4"
plist = "1"
regex = "1"
lazy_static = "1"
