[package]
name = "tasker"
version = "0.1.7"
authors = ["Congyuwang <116020237@link.cuhk.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
zip = "0.5"
actix-multipart = "0.3"
argonautica = "0.2"
futures = "0.3"
sanitize-filename = "0.3"
serde_yaml = "0.8"
strum_macros = "0.19.4"
plist = "1"
regex = "1"
lazy_static = "1"
actix-web-httpauth = "0.5.0"
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
